--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./src/output.css">
     <style>
         body {
             font-family: Rubik, sans-serif;
@@ -52,7 +52,7 @@
 </head>
 
 <body class="bg-sky-600 h-auto w-full"><img class="absolute w-full h-auto md:w-80 lg:w-80 xl:w-80"
-        src="./images/Scott e ramona.png" alt="">
+        src="./src/images/Scott e ramona.png" alt="">
     <section class="title">
         <div class="container mx-auto py-10">
             <div class="row text-center">
@@ -68,12 +68,13 @@
                     <div class="flip-card-inner">
                         <div
                             class="flip-card-front bg-opacity-75 bg-black backdrop-blur-lg flex flex-col items-center justify-center shadow-md rounded-lg">
-                            <p class="text-7xl opacity-40">1</p><img src="./images/chocolate.svg" class="w-1/2 mt-8">
+                            <p class="text-7xl opacity-40">1</p><img src="./src/images/chocolate.svg"
+                                class="w-1/2 mt-8">
                         </div>
                         <div
                             class="flip-card-back bg-opacity-75 bg-black backdrop-blur-lg flex flex-col items-center justify-center shadow-md rounded-lg">
                             <h1 class="text-xl font-semibold mb-6">Bis xtra oreo</h1><img
-                                src="./images/bis xtra oreo.png" class="w-1/2">
+                                src="./src/images/bis xtra oreo.png" class="w-1/2">
                         </div>
                     </div>
                 </div>
@@ -81,12 +82,13 @@
                     <div class="flip-card-inner">
                         <div
                             class="flip-card-front bg-opacity-75 bg-black backdrop-blur-lg flex flex-col items-center justify-center shadow-md rounded-lg">
-                            <p class="text-7xl opacity-40">2</p><img src="./images/chocolate.svg" class="w-1/2 mt-8">
+                            <p class="text-7xl opacity-40">2</p><img src="./src/images/chocolate.svg"
+                                class="w-1/2 mt-8">
                         </div>
                         <div
                             class="flip-card-back bg-opacity-75 bg-black backdrop-blur-lg flex flex-col items-center justify-center shadow-md rounded-lg">
                             <h1 class="text-xl font-semibold mb-6">Bis xtra black</h1><img
-                                src="./images/bis xtra black.png" class="w-1/2">
+                                src="./src/images/bis xtra black.png" class="w-1/2">
                             <p class="text-xl font-semibold mt-6"></p>
                         </div>
                     </div>
@@ -95,11 +97,12 @@
                     <div class="flip-card-inner">
                         <div
                             class="flip-card-front bg-opacity-75 bg-black backdrop-blur-lg flex flex-col items-center justify-center shadow-md rounded-lg">
-                            <p class="text-7xl opacity-40">3</p><img src="./images/chocolate.svg" class="w-1/2 mt-8">
+                            <p class="text-7xl opacity-40">3</p><img src="./src/images/chocolate.svg"
+                                class="w-1/2 mt-8">
                         </div>
                         <div
                             class="flip-card-back bg-opacity-75 bg-black backdrop-blur-lg flex flex-col items-center justify-center shadow-md rounded-lg">
-                            <h1 class="text-xl font-semibold mb-6">Bis xtra</h1><img src="./images/bis xtra.png"
+                            <h1 class="text-xl font-semibold mb-6">Bis xtra</h1><img src="./src/images/bis xtra.png"
                                 class="w-1/2">
                         </div>
                     </div>
