--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
     </section>
-    <section class="main fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+    <section class="main">
         <div class="container mx-auto">
             <div class="row flex justify-center gap-8 flex-wrap">
                 <div class="flip-card w-52 h-72">
